--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,9 @@
 ---
 // https://docs.astro.build/en/guides/view-transitions/
 import { ViewTransitions } from 'astro:transitions';
+import Header from '../components/Header.astro';
+import '../styles/global.css';
+import Footer from '../components/Footer.astro';
 
 interface Props {
   title: string;
@@ -46,40 +49,20 @@ const { title } = Astro.props;
     <ViewTransitions />
   </head>
   <body>
-    <div class="container">
-      <header class="header">
-        <a
-          class="header__title"
-          href="/"
-          >Astro + Sanity</a
-        >
-      </header>
+    <div >
+      <Header />
       <main>
         <slot />
       </main>
-      <footer class="footer">
-        <p class="footer__text">
-          Made with <svg
-            data-sanity-icon="heart-filled"
-            width="1em"
-            height="1em"
-            viewBox="0 0 25 25"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            ><path
-              d="M17 16C15.8 17.3235 12.5 20.5 12.5 20.5C12.5 20.5 9.2 17.3235 8 16C5.2 12.9118 4.5 11.7059 4.5 9.5C4.5 7.29412 6.1 5.5 8.5 5.5C10.5 5.5 11.7 6.82353 12.5 8.14706C13.3 6.82353 14.5 5.5 16.5 5.5C18.9 5.5 20.5 7.29412 20.5 9.5C20.5 11.7059 19.8 12.9118 17 16Z"
-              fill="currentColor"
-              stroke="currentColor"
-              stroke-width="1.2"
-            ></path></svg
-          > at Sanity
-        </p>
-      </footer>
+      <Footer />
     </div>
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
 
-<style>
+<!-- <style>
   .container {
     margin: 0 auto;
   }
@@ -99,8 +82,8 @@ const { title } = Astro.props;
     left: 0;
     right: 0;
     top: 0;
-
-    & .header__title {
+}
+     .header__title {
       font-weight: 800;
       font-size: var(--font-size-3);
       line-height: var(--line-height-1);
@@ -109,7 +92,7 @@ const { title } = Astro.props;
       text-decoration: none;
       color: var(--black);
     }
-  }
+  
 
   .footer {
     display: flex;
@@ -152,9 +135,9 @@ const { title } = Astro.props;
       margin: var(--space-3) 0;
     }
   }
-</style>
+</style> -->
 
-<style is:global>
+<!-- <style is:global>
   :root {
     --space-0: 0;
     --space-1: 4px;
@@ -217,4 +200,4 @@ const { title } = Astro.props;
   body {
     margin: 0;
   }
-</style>
+</style> -->
