--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,115 @@
 ---
-import Card from "../components/Card.astro";
-import Welcome from "../components/Welcome.astro";
+import { PortableText } from "astro-portabletext";
 import Layout from "../layouts/Layout.astro";
-import { getPosts } from "../utils/sanity";
+import { getHomes } from "../utils/sanity";
+import { urlFor } from "../utils/image";
 
-const posts = await getPosts();
+const homes = await getHomes();
+const [home] = homes;
+// console.log(home.title);
 ---
 
-<Layout title="Welcome to Astro.">
-  <section>
-    {posts.length ? posts.map((post) => <Card post={post} />) : <Welcome />}
+<Layout title="Taft Hill Acres">
+  <div class="text-center h-full m-auto mb-8">
+    <p class="w-full lg:w-1/2 bg-tan text-2xl font-light p-6 m-auto">
+      {home.title}
+    </p>
+    <div class="w-full lg:w-3/5 m-auto text-center">
+      {
+        home.mainImage ? (
+          <img
+          class="z-10 object-cover w-full lg:w-5/6 m-auto"
+            src={urlFor(home.mainImage).url()}
+            alt="Cover image"
+          />
+        ) : (
+          <div class="" />
+        )
+      }
+      <div class="w-full lg:w-5/6 my-12 m-auto lg:flex justify-center">
+        <p
+          class="w-full lg:w-1/4 text-center border-b-2 lg:border-b-0 lg:border-r-2 border-darktan/50 pr-8"
+        >
+          {home.blurb}
+        </p>
+        <p class="w-full lg:w-1/4 text-center mt-2 lg:pl-12">{home.blurb2}</p>
+      </div>
+    </div>
+    <section class="w-full bg-tan mx-auto py-8 lg:p-8">
+      <div class="w-full lg:w-2/3 m-auto">
+        <h3 class="text-black text-2xl">{home.subtitle2}</h3>
+        <h2 class="text-black text-5xl text-center mb-12">{home.title2}</h2>
+
+        <div class="lg:flex justify-center lg:text-left text-2xl items-center">
+          <div class="w-full mb-12 lg:w-1/2 p-4 lg:border-r-2 ">
+            <PortableText value={home.body} />
+          </div>
+        <div class="w-full lg:w-1/2 lg:py-4 p-4 lg:pl-8">
+          <PortableText value={home.body2} />
+        </div>
+      </div>
+      </div>
+    </section>
+  </div>
+  <section class="w-2/3 m-auto mt-24 masonry sm:masonry-sm md:masonry-md">
+    <div class="mt-8">
+      <a
+        class="w-3/4 bg-tan text-darktan mt-24 p-4 lg:text-2xl font-extrabold"
+        href={home.buttoninternalLink}>{home.button}</a
+      >
+    </div>
+    <div class="">
+      {
+        home.mason ? (
+          <img
+          class="mb-4 lg:mb-0"
+            src={urlFor(home.mason).url()}
+            alt="Cover image"
+          />
+        ) : (
+          <div class="" />
+        )
+      }
+    </div>
+    {
+      home.mason2 ? (
+        <img
+        class="mb-4 lg:mb-0"
+          src={urlFor(home.mason2).url()}
+          alt="Cover image"
+        />
+      ) : (
+        <div class="" />
+      )
+    }
+    <!-- <img class="mb-4" src={home.mason2.asset.gatsbyImageData} alt={home.mason2.asset.altText} /> -->
+    {
+      home.mason4 ? (
+        <img
+        class="mb-4 lg:mb-0"
+          src={urlFor(home.mason4).url()}
+          alt="Cover image"
+        />
+      ) : (
+        <div class="" />
+      )
+    }
+    <!-- <img class="mb-4 lg:mb-0" src={home.mason4.asset.gatsbyImageData} alt={home.mason4.asset.altText} /> -->
+    {
+      home.mason3 ? (
+        <img
+        class="mb-4 lg:mb-0"
+          src={urlFor(home.mason3).url()}
+          alt="Cover image"
+        />
+      ) : (
+        <div class="" />
+      )
+    }
+    <!-- <img src={home.mason3.asset.gatsbyImageData} alt={home.mason3.asset.altText} class="mb-8 lg:mt-8"/> -->
+    <a
+      class="w-3/4 bg-tan text-darktan mt-12 p-4 lg:text-2xl font-extrabold"
+      href={home.button2internalLink}>{home.button2}</a
+    >
   </section>
 </Layout>
