--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,16 @@
 ---
-import Navigation from './Navigation.astro';
-import Hamburger from './Hamburger.astro';
-
+import Navigation from "./Navigation.astro";
+import Hamburger from "./Hamburger.astro";
 ---
-
 
 <header class="p-2">
   <nav class="h-50">
-  <Hamburger />
-  <Navigation />
+    <Hamburger />
+    <Navigation />
   </nav>
-  <img src="/images/Logo-THA.png" alt="Taft Hill Acreslogo" class="max-w-[550px] w-1/2 lg:w-1/3 m-auto" />
+  <img
+    src="/images/Logo-THA.png"
+    alt="Taft Hill Acreslogo"
+    class="max-w-[550px] w-1/2 lg:w-1/3 m-auto"
+  />
 </header>
