more cleanup, update nav to close

--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -14,11 +14,11 @@
     </p>
     <input type="hidden" name="form-name" value="contact-form" />
     <label class="hidden" for="name">Name</label>
-    <input id="name" type="text" placeholder="name" name="name" class='p-2 mb-2 w-3/4 md:w-96 text-black border-b-2 border-darktan active:bg-tan focus:outline-none focus:ring focus:ring-tan' />
+    <input id="name" type="text" placeholder="name" name="name" class='p-2 mb-2 lg:w-3/4 w-full  md:w-96 text-black border-b-2 border-darktan active:bg-tan focus:outline-none focus:ring focus:ring-tan' />
     <label class="hidden" for="email">Email</label>
-    <input id="email" type="email" name="email" placeholder="email" required class='p-2 mb-2 w-3/4 md:w-96 text-black border-b-2  border-darktan active:bg-tan focus:outline-none focus:ring focus:ring-tan' />
+    <input id="email" type="email" name="email" placeholder="email" required class='p-2 mb-2 w-full lg:w-3/4 md:w-96 text-black border-b-2  border-darktan active:bg-tan focus:outline-none focus:ring focus:ring-tan' />
     <label class="hidden" for="feedback">Message</label>
-    <textarea id="message" wrap="soft" name="message" placeholder="message" required class='w-3/4 md:w-96 h-72 text-black border-2 border-darktan active:bg-tan focus:outline-none focus:ring focus:ring-tan'></textarea>
+    <textarea id="message" wrap="soft" name="message" placeholder="message" required class='w-full lg:w-3/4 md:w-96 h-72 text-black border-2 border-darktan active:bg-tan focus:outline-none focus:ring focus:ring-tan'></textarea>
     <button type="submit" class='bg-darktan text-white p-2 mt-4  hover:bg-tan hover:text-black hover:border-darktan border-2'>Submit</button>
   </form>
 </div>
