--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const [home] = homes;
       }
       <div class="w-full lg:w-5/6 my-12 m-auto lg:flex justify-center">
         <p
-          class="w-full lg:w-1/4 text-center border-b-2 lg:border-b-0 lg:border-r-2 border-darktan/50 pr-8"
+          class="w-full lg:w-1/4 text-center border-b-2 lg:border-b-0 lg:border-r-2 border-darktan/50 lg:pr-8"
         >
           {home.blurb}
         </p>
@@ -51,10 +51,10 @@ const [home] = homes;
       </div>
     </section>
   </div>
-  <section class="w-2/3 m-auto mt-24 masonry sm:masonry-sm md:masonry-md">
-    <div class="mx-auto w-2/3 mt-4 pb-8">
+  <section class="lg:w-2/3 m-auto mt-24 masonry sm:masonry-sm md:masonry-md">
+    <div class="mx-auto w-3/4 lg:w-2/3 mt-4 pb-8">
       <a
-        class="w-3/4 bg-tan text-darktan mt-24 p-4 lg:text-2xl font-extrabold"
+        class="lg:w-3/4 bg-tan text-darktan mt-24 p-4 text-2xl font-extrabold"
         href={home.buttoninternalLink} rel="noopener noreferrer">{home.button}</a
       >
     </div>
@@ -65,6 +65,7 @@ const [home] = homes;
             class="mb-4 lg:mb-0"
             src={urlFor(home.mason).url()}
             alt="Cover image"
+            loading="lazy"
           />
         ) : (
           <div class="" />
@@ -77,6 +78,7 @@ const [home] = homes;
           class="mb-4 lg:mb-0"
           src={urlFor(home.mason2).url()}
           alt="Cover image"
+          loading="lazy"
         />
       ) : (
         <div class="" />
@@ -88,6 +90,7 @@ const [home] = homes;
           class="my-4 lg:mb-0"
           src={urlFor(home.mason4).url()}
           alt="Cover image"
+          loading="lazy"
         />
       ) : (
         <div class="" />
@@ -99,12 +102,13 @@ const [home] = homes;
           class="mb-4 lg:mb-0"
           src={urlFor(home.mason3).url()}
           alt="Cover image"
+          loading="lazy"
         />
       ) : (
         <div class="" />
       )
     }
-    <div class="w-3/5 ml-[85px] mt-8">
+    <div class="lg:w-3/5 ml-[85px] mt-8">
       <a
         class=" bg-tan text-darktan  p-4 lg:text-2xl font-extrabold"
         href={home.button2internalLink} rel="noopener noreferrer">{home.button2}</a
