--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ const [about] = abouts;
           <img
             class="z-10 object-cover w-full lg:w-5/6 m-auto"
             src={urlFor(about.mainImage).url()}
-            alt="Cover image"
+            alt="Bridge with barn and arena in the background"
           />
         ) : (
           <div class="" />
@@ -27,14 +27,14 @@ const [about] = abouts;
     </div>
     <div class="lg:w-3/4 bg-darktan mx-auto p-4 lg:p-12">
       <h3 class="text-left text-black font-bold text-2xl">{about.subtitle}</h3>
-      <h2 class="text-green text-5xl text-center mb-4">{about.title}</h2>
+      {about.title && <h2 class="text-green text-5xl text-center mb-4">{about.title}</h2>}
       <div class="text-white text-left text-2xl">
         <PortableText value={about.body} />
       </div>
     </div>
     <div class="lg:w-3/4 bg-darktan mx-auto my-8 p-4 lg:p-12">
       <h3 class="text-left text-black font-bold text-2xl">{about.subtitle2}</h3>
-      <h2 class="text-green text-5xl text-center mb-4">{about.title2}</h2>
+      {about.title2 && <h2 class="text-green text-5xl text-center mb-4">{about.title2}</h2>}
       <div class="text-white text-left text-2xl">
         <PortableText value={about.body} />
       </div>
