--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import { PortableText } from "astro-portabletext";
 import Layout from "../layouts/Layout.astro";
 import { getHomes } from "../utils/sanity";
 import { urlFor } from "../utils/image";
-import { Image } from 'astro:assets';
+// import { Image } from 'astro:assets';
 const homes = await getHomes();
 const [home] = homes;
 // console.log(home.title);
