--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,8 +11,9 @@ const [about] = abouts;
 ---
 
 <Layout title="Taft Hill Acres | About">
-  <div class="text-center h-full w-full md:h-3/4 md:w-3/4 m-auto mb-8">
+  <div class="text-center h-full w-full md:h-3/4 md:w-3/4 m-auto my-8">
     <div class="m-auto text-center">
+      <h1 class="lg:w-5/6 bg-darktan text-4xl text-white p-6 m-auto">About Taft Hill Acres</h1>
       {
         about.mainImage ? (
           <img
@@ -26,14 +27,14 @@ const [about] = abouts;
       }
     </div>
     <div class="lg:w-3/4 bg-darktan mx-auto p-4 lg:p-12">
-      <h3 class="text-left text-black font-bold text-2xl">{about.subtitle}</h3>
+      <h2 class="text-left text-black font-extrabold text-4xl">{about.subtitle}</h2>
       {about.title && <h2 class="text-green text-5xl text-center mb-4">{about.title}</h2>}
       <div class="text-white text-left text-2xl">
         <PortableText value={about.body} />
       </div>
     </div>
     <div class="lg:w-3/4 bg-darktan mx-auto my-8 p-4 lg:p-12">
-      <h3 class="text-left text-black font-bold text-2xl">{about.subtitle2}</h3>
+      <h2 class="text-left text-black font-extrabold text-4xl">{about.subtitle2}</h2>
       {about.title2 && <h2 class="text-green text-5xl text-center mb-4">{about.title2}</h2>}
       <div class="text-white text-left text-2xl">
         <PortableText value={about.body} />
