--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,15 +10,15 @@ const [home] = homes;
 ---
 
 <Layout title="Taft Hill Acres">
-  <div class="text-center h-full m-auto mb-8">
-    <p class="w-full lg:w-1/2 bg-tan text-2xl font-light p-6 m-auto">
+  <div class="text-center h-full m-auto my-8">
+    <h1 class="w-full  bg-tan text-4xl  p-6 m-auto">
       {home.title}
-    </p>
-    <div class="w-full lg:w-3/5 m-auto text-center">
+    </h1>
+    <div class="w-full  m-auto text-center">
       {
         home.mainImage ? (
           <img
-            class="z-10 object-cover w-full lg:w-5/6 m-auto"
+            class="z-10 object-cover w-full m-auto"
             src={urlFor(home.mainImage).url()}
             alt="two horse noses sticking through the gate"
             loading="eager"
@@ -33,7 +33,7 @@ const [home] = homes;
         >
           {home.blurb}
         </p>
-        <p class="text-2xl w-full lg:w-2/5 text-center mt-2 lg:pl-12">{home.blurb2}</p>
+        <p class="text-2xl w-full lg:w-2/5 text-left lg:pl-16">{home.blurb2}</p>
       </div>
     </div>
     <section class="w-full bg-tan mx-auto py-8 lg:p-8">
