--- a/public/styles/tailwind.css
+++ b/public/styles/tailwind.css
@@ -638,6 +638,10 @@ video {
   margin-bottom: auto;
 }
 
+.-mt-24 {
+  margin-top: -6rem;
+}
+
 .mb-12 {
   margin-bottom: 3rem;
 }
@@ -676,6 +680,10 @@ video {
 
 .mt-24 {
   margin-top: 6rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
 }
 
 .mt-4 {
@@ -1072,12 +1080,20 @@ video {
     margin-right: 2rem;
   }
 
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
   .lg\:mt-8 {
     margin-top: 2rem;
   }
 
   .lg\:flex {
     display: flex;
+  }
+
+  .lg\:h-1\/2 {
+    height: 50%;
   }
 
   .lg\:w-1\/2 {
