--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,12 +4,10 @@ import { ViewTransitions } from "astro:transitions";
 import Header from "../components/Header.astro";
 import "../styles/global.css";
 import Footer from "../components/Footer.astro";
-
-interface Props {
-  title: string;
-}
+// import {VisualEditing} from '@sanity/astro/visual-editing'
 
 const { title } = Astro.props;
+// const visualEditingEnabled = import.meta.env.PUBLIC_SANITY_VISUAL_EDITING_ENABLED == 'true'
 ---
 
 <!doctype html>
@@ -36,6 +34,7 @@ const { title } = Astro.props;
       <Header />
       <main>
         <slot />
+        <!-- <VisualEditing enabled={visualEditingEnabled} zIndex={1000} /> -->
       </main>
       <Footer />
     </div>
